# NetMeta

./: .bash_completions  .bazelrc  .gitignore  BUILD  README.md  UPGRADE.md  WORKSPACE  config.cue  default.nix  dump_tool.cue  example-config.sh  go.mod  go.sum  hack.txt  install.sh  netmeta.cue  repositories.bzl  shell.nix  tools.go  uninstall.sh
.github/workflows/: build_images.yml
cmd/gendocs/: main.go
cmd/helloworld/: BUILD  BUILD.bazel  helloworld.go
cmd/portmirror/: BUILD  frame.go  iface.go  portmirror.go
cmd/reconciler/: BUILD.bazel  config.go  main.go  placeholder.s  quote.go  reconciler.go  visitor.go
cmd/risinfo/: BUILD.bazel  README.md  risinfo.go
cue.mod/: module.cue
dashboards/: ClickHouse_Queries.json  NetMeta_Overview.json  NetMeta_Relations.cue  README.md  base.cue  clean.sh  dump_tool.cue
deploy/: apply_tool.cue  base_tool.cue  deps.go  diff_tool.cue  dump_tool.cue  generate.sh  go.mod  go.sum  k8s_defs.cue  ls_tool.cue
deploy/base/clickhouse/: clickhouse.cue  external.cue  files.cue  static_files.cue
deploy/cue.mod/: module.cue
deploy/dashboards/: .gitignore  General_Home.cue  HOWTO.md  NetMeta_Overview.cue  NetMeta_Relations.cue  base.cue  clean.sh  types.cue
deploy/dashboards/clickhouse_queries/: ClickHouse_Queries.cue
deploy/dashboards/netmeta/: NetMeta_Overview.cue  NetMeta_Relations.cue  base.cue  dashboards.cue  types.cue
deploy/dashboards/netmeta_overview/: NetMeta_Overview.cue
deploy/k8s-base/clickhouse-operator/: README.md  clickhouse-operator-install-bundle.cue  clickhouse-operator.cue
deploy/k8s-base/strimzi-kafka-operator/: README.md  strimzi-cluster-operator-0.31.1.cue
deploy/k8s-base/traefik/: kubernetes-crd-definition-v1.cue
deploy/nix/: config.cue  defs.cue  dump_tool.cue
deploy/single-node/: README.md  apply_tool.cue  config.cue  config_legacy.cue  defs.cue  diff_tool.cue  dump_tool.cue
deploy/single-node/clickhouse-operator/: clickhouseinstallations_crd.cue  clickhouseinstallationtemplates_crd.cue  clickhouseoperatorconfigurations_crd.cue  clusterrolebinding.cue  config_operator.cue  config_server.cue  config_templates.cue  config_users.cue  crds.cue  deployment.cue  serviceaccount.cue  services.cue
doc/: grafana.md  ingest.md  single-node-dataflow.excalidraw  single-node-deployment.md
on/k3s/: apply_tool.cue  defs.cue
on/k3s/goflow/: deployment.cue
pb/: BUILD.bazel  FlowMessage.proto
schema/: 0001_create_flows_raw.sql  0002_create_dictionaries_database.sql  0002_optimize_part_dropping.sql  1_init.down.sql  1_init.up.sql  BUILD  include.go  views.cue
scripts/: build_containers.sh  git-tree-hash.sh  print-workspace-status.sh
toolbox/: Dockerfile
tools/: bazel
(+79 files in other folders)
